language/move-lang/tests/move_check/typing/module_call_wrong_argument_in_list.exp
error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:23 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                       ------- Is not compatible with: 'address'
    ·
 20 │         foo(false, 0, S{});
    │         ^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'a'
    │             ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:35 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                                   --- Is not compatible with: 'u64'
    ·
 21 │         foo(0x0, false, S{});
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'u'
    │                  ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:43 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                                           - Is not compatible with: '0x1::M::S'
    ·
 22 │         foo(0x0, 0, false);
    │         ^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 's'
    │                     ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:35 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                                   --- Is not compatible with: 'u64'
    ·
 23 │         foo(0x0, false, false);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'u'
    │                  ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:43 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                                           - Is not compatible with: '0x1::M::S'
    ·
 23 │         foo(0x0, false, false);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 's'
    │                         ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:23 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                       ------- Is not compatible with: 'address'
    ·
 24 │         foo(false, 0, false);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'a'
    │             ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:43 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                                           - Is not compatible with: '0x1::M::S'
    ·
 24 │         foo(false, 0, false);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 's'
    │                       ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:23 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                       ------- Is not compatible with: 'address'
    ·
 25 │         foo(false, false, S{});
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'a'
    │             ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:16:35 ───
    │
 16 │     public fun foo(a: address, u: u64, s: S) {
    │                                   --- Is not compatible with: 'u64'
    ·
 25 │         foo(false, false, S{});
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'u'
    │                    ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:23 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                       ------- Is not compatible with: 'address'
    ·
 29 │         X::foo(false, 0, X::s());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 'a'
    │                ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:35 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                                   --- Is not compatible with: 'u64'
    ·
 30 │         X::foo(0x0, false, X::s());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 'u'
    │                     ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:43 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                                           - Is not compatible with: '0x1::X::S'
    ·
 31 │         X::foo(0x0, 0, S{});
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 's'
    │                        --- The type: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:35 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                                   --- Is not compatible with: 'u64'
    ·
 32 │         X::foo(0x0, false, S{});
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 'u'
    │                     ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:43 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                                           - Is not compatible with: '0x1::X::S'
    ·
 32 │         X::foo(0x0, false, S{});
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 's'
    │                            --- The type: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:23 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                       ------- Is not compatible with: 'address'
    ·
 33 │         X::foo(false, 0, S{});
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 'a'
    │                ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:43 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                                           - Is not compatible with: '0x1::X::S'
    ·
 33 │         X::foo(false, 0, S{});
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 's'
    │                          --- The type: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:23 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                       ------- Is not compatible with: 'address'
    ·
 34 │         X::foo(false, false, X::s());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 'a'
    │                ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/module_call_wrong_argument_in_list.move:8:35 ───
    │
  8 │     public fun foo(a: address, u: u64, s: S) {
    │                                   --- Is not compatible with: 'u64'
    ·
 34 │         X::foo(false, false, X::s());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::X::foo'. Invalid argument for parameter 'u'
    │                       ----- The type: 'bool'
    │

